@@ -37,6 +37,7 @@
 		<option name='use_autosave' value='0'/>
 		<option name='use_throttle' value='0'/>
 		<option name='use_debug' value='0'/>
+		<option name='use_dipswitches' value='0'/>
 		<option name='write_mng' value='0'/>
 		<option name='write_avi' value='0'/>
 		<option name='write_wav' value='0'/>
