@@ -430,6 +430,7 @@
 	- added message about "test_softreset" only working with "use_debug" enabled
 	- removed "hack_debug" as debugger can also be in non-debug builds now
 	- "use_debug" can now be used with non-debug builds
+	- added option "use_dipswitches" to test all non-default dipswitch settings (not working yet / needs a patch to src/emu/info.c)
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
